@@ -1313,7 +1313,10 @@ set_root_pixmap (GdkPixmap *pixmap)
 	guchar *data_esetroot;
 	Pixmap pixmap_id;
 
-	pixmap_id = GDK_WINDOW_XWINDOW (pixmap);
+	if (pixmap != NULL && pixmap != (GdkPixmap *) -1)
+		pixmap_id = GDK_WINDOW_XWINDOW (pixmap);
+	else
+		pixmap_id = 0;
 
 	XGrabServer (GDK_DISPLAY ());
 
